force-app/main/default/objects/HeroEmployee__c/HeroEmployee__c.object-meta.xml
<CustomObject>
    <label>HeroEmployee</label>
    <nameField>
        <displayFormat>EMP-{0000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HeroEmployees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>