force-app/main/default/objects/HeroEmployee__c/fields/employee_address__c.field-meta.xml
<CustomField>
    <fullName>employee_address__c</fullName>
    <label>employee address</label>
    <type>TextArea</type>
</CustomField>