force-app/main/default/objects/HeroEmployee__c/fields/employee_dept_name__c.field-meta.xml
<CustomField>
    <fullName>employee_dept_name__c</fullName>
    <label>employee dept name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>