force-app/main/default/objects/HeroEmployee__c/fields/employee_father_s_name__c.field-meta.xml
<CustomField>
    <fullName>employee_father_s_name__c</fullName>
    <label>employee father&apos;s name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>