force-app/main/default/objects/HeroEmployee__c/fields/employee_name__c.field-meta.xml
<CustomField>
    <fullName>employee_name__c</fullName>
    <label>employee_name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>