force-app/main/default/objects/HeroEmployee__c/fields/employee_salary__c.field-meta.xml
<CustomField>
    <fullName>employee_salary__c</fullName>
    <label>employee salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>